src/objects/MetroclientProductGeography__c.object
<CustomObject>
    <description>Metroclient Product Catalog - Associates products with the geographies they are offered in.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the product-geography is currently available for sale.</description>
        <inlineHelpText>Indicates if the product-geography is currently available for sale. Inactive product geographies will not be included in the product selector&apos;s tiered selections (when applicable).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeFromPriceTier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When TRUE, exclude from Product Selector&apos;s price tier</description>
        <inlineHelpText>Check when product geography should be excluded from the product selector&apos;s tiered selections because product geography has its own dedicated rate plans.</inlineHelpText>
        <label>Exclude From Price Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Annual_List_Price__c</fullName>
        <label>(FC) Annual List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Monthly_List_Price__c</fullName>
        <label>(FC) Monthly List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_One_Time_List_Price__c</fullName>
        <label>(FC) One-Time List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Quarterly_List_Price__c</fullName>
        <label>(FC) Quarterly List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FC_Semi_Annual_List_Price__c</fullName>
        <label>(FC) Semi-Annual List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geography</label>
        <referenceTo>MetroclientGeography__c</referenceTo>
        <relationshipName>MetroclientProductGeographies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCatalogRecordId__c</fullName>
        <description>18 character version of the SFDC Id.  Used by Zuora to associate subscription rate plan charges / product rate plan charges with a product geography.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 character unique id used by Zuora as the &quot;Record Id&quot; that associates subscription rate plan charges / product rate plan charges with a product geography.</inlineHelpText>
        <label>Product Catalog Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGeographyType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Geography Type</label>
        <referenceTo>MetroclientProductGeographyType__c</referenceTo>
        <relationshipName>MetroclientProductGeographies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sandbox_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Temporay field for data migration</description>
        <inlineHelpText>Temporay field for data migration</inlineHelpText>
        <label>Sandbox Record Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Seg2__c</fullName>
        <label>Seg2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Metrostudy Product Geography</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductCatalogRecordId__c</columns>
        <columns>Geography__c</columns>
        <columns>ProductGeographyType__c</columns>
        <columns>Active__c</columns>
        <columns>ExcludeFromPriceTier__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RRI_Recently_Created</fullName>
        <columns>ProductGeographyType__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Geography__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/1/2017 12:00 AM</value>
        </filters>
        <label>RRI Products (Recently Created)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>United_States</fullName>
        <columns>ProductCatalogRecordId__c</columns>
        <columns>ProductGeographyType__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Geography__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductGeographyType__c</field>
            <operation>contains</operation>
            <value>Country</value>
        </filters>
        <label>National Products</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Product Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>